Title fixed on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -62,11 +62,12 @@ h2 {
 }
 
 h1 {
-    font-size    : 4rem;
-    margin-bottom: 4rem;
-    filter       : drop-shadow(0 0 1px var(--mainColor)) drop-shadow(0 0 1px var(--mainColor));
+    font-size: 4rem;
+    filter   : drop-shadow(0 0 1px var(--mainColor)) drop-shadow(0 0 1px var(--mainColor));
 
     @media screen and (max-width: 600px) {
+        position : fixed;
+        top      : 2rem;
         font-size: 2.6rem;
     }
 }
@@ -75,6 +76,10 @@ h2 {
     font-size    : 4rem;
     font-weight  : normal;
     margin-bottom: 1rem;
+
+    @media screen and (max-width: 600px) {
+        font-size: 3rem;
+    }
 }
 
 form {
